--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "decky-plugin-template",
+  "name": "file-browser",
   "version": "0.0.1",
   "description": "A template to quickly create decky plugins from scratch, based on TypeScript and webpack",
   "scripts": {
-    "prepare": "touch requirements.txt && pip3 install --upgrade -r requirements.txt -t py_modules",
+    "prepare": "pip3 install --upgrade -r requirements.txt -t py_modules",
     "build": "shx rm -rf dist && rollup -c",
     "watch": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "flags": [
+    "debug"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SteamDeckHomebrew/decky-plugin-template.git"
@@ -19,12 +22,12 @@
     "steam-deck",
     "deck"
   ],
-  "author": "Jonas Dellinger <jonas@dellinger.dev>",
+  "author": "Runtime Terror",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/SteamDeckHomebrew/decky-plugin-template/issues"
   },
-  "homepage": "https://github.com/SteamDeckHomebrew/decky-plugin-template#readme",
+  "homepage": "https://github.com/SteamDeckHomeb ew/decky-plugin-template#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -40,7 +43,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "decky-frontend-lib": "^3.6.1",
+    "decky-frontend-lib": "^3.18.5",
     "react-icons": "^4.4.0"
   },
   "pnpm": {
